--- a/main.html
+++ b/main.html
@@ -1,9 +1,23 @@
+<!DOCTYPE html>
 <html>
     <head>
+        <meta charset="UTF-8">
+        <title>Main</title>
+        <nav>
+            <ul>
+                <li><a href="http://www.mail.ru">mail.ru</a></li>
+                <li><a href="https://www.google.com">Google.com</a></li>
+            </ul>
+        </nav>
     </head>
+    <aside>
+        <h3>Test</h3>
+        <p>ParaTest</p>
+    </aside>
     <body>
         <b>test</b>
         <b><i>test2</i></b>
         <a href="mail.ru">link</a>
+        <p><abbr title="Training Education Stronger Testing">TEST</abbr></p>
     </body>
 </html>
