--- a/main.html
+++ b/main.html
@@ -17,7 +17,20 @@
     <body>
         <b>test</b>
         <b><i>test2</i></b>
-        <a href="mail.ru">link</a>
+        <p><a href="mail.ru"><img src="logo.png">te</a></p>
         <p><abbr title="Training Education Stronger Testing">TEST</abbr></p>
+        <p><abbr title="abcdefghijklmnopqrstuvxyz">abcdefghijklmnopqrstuvxyz</abbr></p>
+        <details open>
+            <ol>
+                <li>test1</li>
+                <li>test2</li>
+                <li>test3</li>
+            </ol>
+        </details>
+        <p hidden>hdfhgfcvhncf</p>
+        <article contenteditable>
+            <h2>test<code>section</code></h2>
+            <p>hfchfghxh xvnxhxfhhfx <code>section</code></p>
+        </article>
     </body>
 </html>
