Change video background

--- a/audio.html
+++ b/audio.html
@@ -6,7 +6,7 @@
         <nav>
             <ul>
                 <li><a href="index.html">main</a></li>
-                <li><a href="audio.html">audio</a></li>
+                <li><a href="video.html">video</a></li>
             </ul>
         </nav>
     </head>
