--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             </div>
             <div>
                 <p>Картинка</p>
-                <p><a href="mail.ru"><img src="media/pic/pic1.jpg" width="200" height="300">te</a></p>
+                <p><a href="pic.html"><img src="media/pic/pic1.jpg" width="200" height="300">te</a></p>
             </div>
             <div>
                 <p>Абривеатуры:</p>
