--- a/audio.html
+++ b/audio.html
@@ -3,14 +3,17 @@
     <head>
         <meta charset="UTF-8">
         <title>Main</title>
-        <nav>
-            <ul>
-                <li><a href="index.html">main</a></li>
-                <li><a href="video.html">video</a></li>
-            </ul>
-        </nav>
     </head>
     <body>
+        <nav>
+            <ul>
+                <li><h3><a href="index.html">Main</a></h3></li>
+                <li><h3><a href="video.html">Video</a></h3></li>
+                <li><h3><a href="pic.html">Picture</a></h3></li>
+                <li><h3><a href="about.html">About us</a></h3></li>
+
+            </ul>
+        </nav>
         <div class="backgroundvideo">
             <video loop autoplay preload="metadata" muted>
                 <source src="media\video\video1.mp4">
