--- a/about.html
+++ b/about.html
@@ -3,15 +3,15 @@
     <head>
         <meta charset="UTF-8">
         <title>Main</title>
+
     </head>
     <body>
         <nav>
             <ul>
                 <li><h3><a href="index.html">Main</a></h3></li>
                 <li><h3><a href="audio.html">Audio</a></h3></li>
+                <li><h3><a href="video.html">Video</a></h3></li>
                 <li><h3><a href="pic.html">Picture</a></h3></li>
-                <li><h3><a href="about.html">About us</a></h3></li>
-
             </ul>
         </nav>
         <div class="backgroundvideo">
