--- a/index.html
+++ b/index.html
@@ -4,18 +4,21 @@
         <!-- <meta charset="UTF-8"> -->
         <title>Main</title>
         <link rel="stylesheet" href="css/style.css"/>
-        <nav>
-            <ul>
-                <li><h3><a href="audio.html">audio</a></h3></li>
-                <li><h3><a href="video.html">video</a></h3></li>
-            </ul>
-        </nav>
+
     </head>
     <!-- <aside>
         <h3>Test</h3>
         <p>ParaTest</p>
     </aside> -->
     <body>
+        <nav>
+            <ul>
+                <li><h3><a href="audio.html">Audio</a></h3></li>
+                <li><h3><a href="video.html">Video</a></h3></li>
+                <li><h3><a href="pic.html">Picture</a></h3></li>
+                <li><h3><a href="about.html">About us</a></h3></li>
+            </ul>
+        </nav>
         <div class="screen">
                 <video id="backgroundvideo" loop autoplay preload="metadata" muted width="1080s">
                     <source src="media\video\video1.mp4">
@@ -29,8 +32,8 @@
 
             </div>
             <div>
-                <p>Картинка</p>
-                <p><a href="pic.html"><img src="media/pic/pic1.jpg" width="200" height="300">te</a></p>
+                <p>Картинка (для перехода на страницу с картинками нажмите на картинку)</p>
+                <p><a href="pic.html"><img src="media/pic/pic1.jpg" width="200" height="300"></a></p>
             </div>
             <div>
                 <p>Абривеатуры:</p>
