--- a/pic.html
+++ b/pic.html
@@ -3,18 +3,20 @@
     <head>
         <meta charset="UTF-8">
         <title>Main</title>
-        <nav>
-            <ul>
-                <li><a href="index.html">main</a></li>
-                <li><a href="audio.html">audio</a></li>
-            </ul>
-        </nav>
     </head>
     <body>
-        <div class="backgroundvideo">
-            <video loop autoplay preload="metadata" muted>
-                <source src="media\video\video1.mp4">
-            </video>
-        </div>
+        <nav>
+            <ul>
+                <li><h3><a href="index.html">Main</a></h3></li>
+                <li><h3><a href="audio.html">Audio</a></h3></li>
+                <li><h3><a href="video.html">Video</a></h3></li>
+                <li><h3><a href="about.html">About us</a></h3></li>
+            </ul>
+        </nav>
+        <div class="screen">
+            <picture id="backgroundpic">
+                <img src="media/pic/pic1.jpg" width=100% height="600">
+            </picture>
+    </div>
     </body>
 </html>
