--- a/pic.html
+++ b/pic.html
@@ -15,7 +15,7 @@
         </nav>
         <div class="screen">
             <picture id="backgroundpic">
-                <img src="media/pic/pic1.jpg" width=100% height="600">
+                <img src="media/pic/pic1.jpg" width=50% height="50%">
             </picture>
     </div>
     </body>
