Create JS function

--- a/about.html
+++ b/about.html
@@ -2,11 +2,13 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>Main</title>
+        <title>About</title>
+        <link rel="stylesheet" href="css/style.css"/>
 
     </head>
     <body>
-        <nav>
+
+        <nav id="navi" hidden>
             <ul>
                 <li><h3><a href="index.html">Main</a></h3></li>
                 <li><h3><a href="audio.html">Audio</a></h3></li>
@@ -14,10 +16,11 @@
                 <li><h3><a href="pic.html">Picture</a></h3></li>
             </ul>
         </nav>
-        <div class="backgroundvideo">
-            <video loop autoplay preload="metadata" muted>
-                <source src="media\video\video1.mp4">
-            </video>
+       <button id="Test">Показать панель навигации</button>
+       <br></br>
+       <input />
+    <script src="script.js"></script>
+
         </div>
     </body>
 </html>
