--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <p>ParaTest</p>
     </aside> -->
     <body>
-        <nav> 
+        <nav id="navi"> 
             <ul>
                 <li><h3><a href="audio.html">Audio</a></h3></li>
                 <li><h3><a href="video.html">Video</a></h3></li>
@@ -19,6 +19,9 @@
                 <li><h3><a href="about.html">About us</a></h3></li>
             </ul>
         </nav>
+        <button id="Test">Показать панель навигации</button>
+       <br></br>
+    <script src="script.js"></script>
         <div class="screen">
                 <video id="backgroundvideo" loop autoplay preload="metadata" muted width="1080s">
                     <source src="media\video\video1.mp4">
