check the element nav

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <p>ParaTest</p>
     </aside> -->
     <body>
-        <nav id="navi"> 
+        <nav id="navi" hidden> 
             <ul>
                 <li><h3><a href="audio.html">Audio</a></h3></li>
                 <li><h3><a href="video.html">Video</a></h3></li>
