--- a/about.html
+++ b/about.html
@@ -1,26 +1,37 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8">
-        <title>About</title>
-        <link rel="stylesheet" href="css/style.css"/>
 
-    </head>
-    <body>
+<head>
+    <meta charset="UTF-8">
+    <title>About</title>
+    <link rel="stylesheet" href="css/style.css" />
 
-        <nav id="navi" hidden>
-            <ul>
-                <li><h3><a href="index.html">Main</a></h3></li>
-                <li><h3><a href="audio.html">Audio</a></h3></li>
-                <li><h3><a href="video.html">Video</a></h3></li>
-                <li><h3><a href="pic.html">Picture</a></h3></li>
-            </ul>
-        </nav>
-       <button id="Test">Показать панель навигации</button>
-       <br></br>
-       <input />
+</head>
+
+<body>
+
+    <nav id="navi" hidden>
+        <ul>
+            <li>
+                <h3><a href="index.html">Main</a></h3>
+            </li>
+            <li>
+                <h3><a href="audio.html">Audio</a></h3>
+            </li>
+            <li>
+                <h3><a href="video.html">Video</a></h3>
+            </li>
+            <li>
+                <h3><a href="pic.html">Picture</a></h3>
+            </li>
+        </ul>
+    </nav>
+    <button id="Test">Показать панель навигации</button>
+    <br></br>
+    <input />
+
+    </div>
     <script src="script.js"></script>
+</body>
 
-        </div>
-    </body>
 </html>
