--- a/pic.html
+++ b/pic.html
@@ -4,12 +4,52 @@
 <head>
     <meta charset="UTF-8">
     <title>Main</title>
-
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/menu.css" />
+    <link rel="stylesheet" href="Source/OwlCarousel2-2.3.4/dist/assets/owl.carousel.min.css">
+    <link rel="stylesheet" href="Source/OwlCarousel2-2.3.4/dist/assets/owl.theme.default.min.css">
 </head>
 
 <body>
-    <link rel="stylesheet" href="Source/OwlCarousel2-2.3.4/dist/assets/owl.carousel.min.css">
-    <link rel="stylesheet" href="Source/OwlCarousel2-2.3.4/dist/assets/owl.theme.default.min.css">
+    <menu class="menu">
+        <li class="menu-item">
+            <button type="button" class="menu-btn">
+        <i class="fa fa-folder-open"></i>
+        <span class="menu-text">Открыть</span>
+        </button>
+        </li>
+        <li class="menu-item disabled">
+            <button type="button" class="menu-btn">
+        <span class="menu-text">Открыть в новой вкладке</span>
+        </button>
+        </li>
+        <li class="menu-separator"></li>
+        <li class="menu-item">
+            <button type="button" class="menu-btn">
+        <i class="fa fa-reply"></i>
+        <span class="menu-text">Обновить</span>
+        </button>
+        </li>
+        <li class="menu-separator"></li>
+        <li class="menu-item">
+            <button type="button" class="menu-btn">
+        <i class="fa fa-download"></i>
+        <span class="menu-text">Сохранить</span>
+        </button>
+        </li>
+        <li class="menu-item">
+            <button type="button" class="menu-btn">
+        <i class="fa fa-edit"></i>
+        <span class="menu-text">Изменить</span>
+        </button>
+        </li>
+        <li class="menu-item">
+            <button type="button" class="menu-btn">
+        <i class="fa fa-trash"></i>
+        <span class="menu-text">Удалить</span>
+        </button>
+        </li>
+    </menu>
     <nav>
         <ul>
             <li>
@@ -56,7 +96,8 @@
             </div>
         </div>
     </div>
-
+    <!-- scripts -->
+    <script src="Source/menu.js"></script>
     <script src="Source/jQuery.js"></script>
     <script src="Source/OwlCarousel2-2.3.4/dist/owl.carousel.min.js"></script>
     <script>
