Added "Send mail to me" in about.html

--- a/about.html
+++ b/about.html
@@ -28,10 +28,17 @@
     </nav>
     <button id="Test">Показать панель навигации</button>
     <br></br>
-    <input />
+
 
     </div>
     <script src="Source/menu.js"></script>
+    <form action="mailto:artemiy.mitrofanov@mail.ru">
+        <p>Введите Ваше имя:</p>
+        <input title="Name" />
+        <p>Введите аддрес электроной почты:</p>
+        <input title="e-mail" />
+        <button>Написать мне письмо</button>
+    </form>
 </body>
 
 </html>
