--- a/pic.html
+++ b/pic.html
@@ -15,7 +15,7 @@
         <li class="menu-item">
             <button type="button" class="menu-btn">
         <i class="fa fa-folder-open"></i>
-        <span class="menu-text" >Открыть</span>
+        <span class="menu-text"  class="menu-btn" >Открыть</span>
         </button>
         </li>
         <li class="menu-item disabled">
