--- a/pic.html
+++ b/pic.html
@@ -15,7 +15,7 @@
         <li class="menu-item">
             <button type="button" class="menu-btn">
         <i class="fa fa-folder-open"></i>
-        <span class="menu-text"  class="menu-btn" >Открыть</span>
+        <span class="menu-text" id="open" class="menu-btn" >Открыть</span>
         </button>
         </li>
         <li class="menu-item disabled">
@@ -70,7 +70,7 @@
         <!-- <picture id="backgroundpic">
             <img src="media/pic/pic1.jpg" width=50% height="50%">
         </picture> -->
-        <div id="js-carousel-1" class="owl-carousel  owl-theme owl-loaded owl-drag" style=" width: 1200px; position: relative; cursor: grab;">
+        <div id="js-carousel-1" class="owl-carousel  owl-theme owl-loaded owl-drag" style="overflow: auto; width: 1200px; position: relative; cursor: grab;">
             <div class="owl-stage">
                 <div class="owl-item">
                     <div class="carousel-item"><img src="media/pic/pic1.jpg" width="400px" height="400px"></div>
