--- a/about.html
+++ b/about.html
@@ -32,11 +32,14 @@
 
     </div>
     <script src="Source/menu.js"></script>
-    <form action="mailto:artemiy.mitrofanov@mail.ru">
+    <form action="">
         <p>Введите Ваше имя:</p>
         <input title="Name" />
         <p>Введите аддрес электроной почты:</p>
-        <input title="e-mail" />
+        <input title="Email" type="email" />
+
+    </form>
+    <form action="mailto:artemiy.mitrofanov@mail.ru" hidden>
         <button>Написать мне письмо</button>
     </form>
 </body>
