--- a/pic.html
+++ b/pic.html
@@ -13,42 +13,18 @@
 <body>
     <menu class="menu">
         <li class="menu-item">
-            <button type="button" class="menu-btn" id="openBTN">
-        <i class="fa fa-folder-open"></i>
-        <span class="menu-text" class="menu-btn" >Открыть</span>
-        </button>
-        </li>
-        <li class="menu-item disabled">
-            <button type="button" class="menu-btn">
-        <span class="menu-text">Открыть в новой вкладке</span>
-        </button>
-        </li>
-        <li class="menu-separator"></li>
-        <li class="menu-item">
-            <button type="button" class="menu-btn">
-        <i class="fa fa-reply"></i>
-        <span class="menu-text">Обновить</span>
-        </button>
-        </li>
-        <li class="menu-separator"></li>
-        <li class="menu-item">
-            <button type="button" class="menu-btn">
-        <i class="fa fa-download"></i>
-        <span class="menu-text">Сохранить</span>
-        </button>
+            <button type="button" class="menu-btn" id="BTNOpen">Открыть</button>
         </li>
         <li class="menu-item">
-            <button type="button" class="menu-btn">
-        <i class="fa fa-edit"></i>
-        <span class="menu-text">Изменить</span>
-        </button>
+            <button type="button" class="menu-btn" id="BTNReload">Обновить</button>
         </li>
         <li class="menu-item">
-            <button type="button" class="menu-btn">
-        <i class="fa fa-trash"></i>
-        <span class="menu-text">Удалить</span>
-        </button>
+            <button type="button" class="menu-btn" id="BTNReturn">Назад</button>
         </li>
+        <li class="menu-item">
+            <button type="button" class="menu-btn" id="BTNAlert">Alert!</button>
+        </li>
+
     </menu>
     <nav id="navi" hidden>
         <ul>
