--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                     </section>
                 </div>
             </div>
-            <div id="table">
+            <div id="table" hidden>
                 <table>
                     <tr>
                         <td>123</td>
